2011-10-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo.cpp: bug fix: Track information was not reset when
	opening more than one file in the GUI.

2011-10-03  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The PGS subtitle output module was not
	outputting any packet in certain cases due to uninitialized
	variables.

2011-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed mkvmerge not finding any track in TS
	streams whose first PMT packet could not be parsed (e.g. invalid
	CRC).

	* mkvmerge: bug fix: Fixed detection of TS streams that only
	contain one PAT or PMT packet within the first few KB but no
	others within the first 10 MB.

2011-09-24  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.0.0.

	* build system: libEBML 1.2.2 and libMatroska 1.3.0 are required
	for building. If external versions are not found or if they're too
	old then the included versions will be used as a fallback.

2011-09-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The "writing application" element will not be
	localized but always be written in English.

2011-09-20  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: MPEG TS: mkvmerge will extract the track
	languages from a corresponding clpi (clip info) file. That file is
	searched for in the same directory and in ../CLIPINF and must
	have the same base name but with the ".clpi" extension.

	* mkvmerge: enhancement: Added new stereo mode options to match
	the current specs. The new options are "anaglyph_green_magenta"
	(12), "both_eyes_laced_left_first" (13) and
	"both_eyes_laced_right_first" (14).

	* mkvmerge: The --stereo-mode named option "anaglyph" was renamed
	to "anaglyph_cyan_red" to match the specs. The numerical value
	(10) remains unchanged.

2011-09-18  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Fixed attachment number displayed during
	extraction. Fix for bug 663.

	* mkvmerge: enhancement: MPEG TS: Added support for HDMV PGS
	subtitles.
